# cmoult

./: .gitignore  LICENSE.txt  README.md  README.txt  doc.sh  enhanced-pypy.patch  opcode-python.ods  setup.py
cmoult/: CMakeLists.txt  CMoult.md  LICENSE.txt  README.md  report.md
cmoult/cmoult/: CMakeLists.txt
cmoult/cmoult/include/: alterability.h  api.h  codeloader.h  common.h  dsuthread.h  listener.h  lowlevel.h  manager.h  update.h  update_common_header.h.template  update_queue.h
cmoult/cmoult/src/: common.c  temp
cmoult/cmoult/src/highlevel/: codeloader.c  dsuthread.c
cmoult/cmoult/src/highlevel/listeners/: common.c  socket_listener.c
cmoult/cmoult/src/highlevel/managers/: common.c  extern_manager.c
cmoult/cmoult/src/highlevel/updates/: force_quiescence_update.c.template  safe_redefine_update.c.template  static_update_point_redefine_function.c.template  update_queue.c
cmoult/cmoult/src/lowlevel/: alterability.c  api.c
cmoult/examples/eager_conversion_update/: test.sh
cmoult/examples/force_quiescence_update/: Makefile  test  test.sh
cmoult/examples/lazy_update/: test.sh
cmoult/examples/modify_integer_pointer/: test.sh
cmoult/examples/modify_struct_immediate_access/: test.sh
cmoult/examples/safe_redefine_update/: test.sh
cmoult/examples/static_update_point_redefine_function/: Makefile  test  test.sh
cmoult/libama/: CMakeLists.txt  test.sh  tests
cmoult/libama/include/: VARIABLES.h  temp  variables.h
cmoult/libama/include/luminati/: binutils_includes.h  compute_location.h  data_structs.h  elfutils_includes.h  generate_trace.h  get_function.h  lazy_update.h  libuminati.h  read_str.h  rwutils.h  set_variable.h  unwind.h  watch_access.h
cmoult/libama/src/: libama.c  main.c
cmoult/libama/src/libuminati/: common_utils.c  compute_location.c  generate_trace.c  get_frame_info.c  get_function.c  get_local_var_addr.c  get_stack_size.c  get_var_addr.c  get_var_size.c  init.c  insert_jump.c  is_function_in_stack.c  load_code.c  parse.c  read_str.c  redefine.c  rwutils.c  set_variable.c  unwind.c  wait_out_of_stack.c  watch_access.c
cmoult/libama/test/: Makefile  temp  test
cmoult/libama/test/src/: test.c
cmoult/libuminati/: CMakeLists.txt  LICENSE.txt  README.md  finddw
cmoult/libuminati/include/: add_memory.h  add_watchpoint.h  common_utils.h  dwarf_ops.h  get_frame_info.h  get_function_addr.h  get_str_len.h  get_var_addr.h  init.h  insert_jump.h  is_function_in_stack.h  libuminati.h  load_code.h  parse.h  read_str.h  redefine.h  registers.h  rwutils.h  set_variable.h
cmoult/libuminati/src/: add_watchpoint.c  common_utils.c  compute_location.c  destroy.c  dwarf_ops.c  get_frame_info.c  get_function_addr.c  get_local_var_addr.c  get_str_len.c  init.c  lazy_update.c  parse.c  read_str.c  redefine.c  rwutils.c  set_variable.c  unwind.c  wait_out_of_stack.c  watch_access.c
cymoult/: README.md
cymoult/demos/demo1/: .demo1.c.swp  Makefile  README  demo1.c  manager1.c  manager2.c  manager3.c
cymoult/demos/snake/: Makefile  README  manager.c  manager2.c  snake.c
cymoult/demos/snake2tetris/: Makefile  README  functions.c  functions.h  manager.c  snake.c
cymoult/highlevel/includes/: dsuthread.h  listener.h  manager.h  update.h
cymoult/highlevel/src/: codeloader.c
cymoult/highlevel/tests/: basic_test.c  build_all.sh  build_mod.sh  comp.sh  load_test.c  manager_test.c  patch.c  script.c  test.c  update  update.c
cymoult/includes/: codeloader.h  common.h  listener.h  manager.h  update.h
cymoult/libama/: Makefile  README  lamanager.c  lamanager2.c  libama.c  libama.h  libtest.c  main.c  manager.c  manager2.c
cymoult/libama/testprogs/: prog
cymoult/libuminati/: Makefile  README  configure
examples/basics/: README.md
examples/basics/eagerConv/: application.py  test.sh  update.py
examples/basics/forceQuiescence/: application.py  test.sh  update.py
examples/basics/lazyConv/: application.py  update.py
examples/basics/manager/: manager.txt
examples/basics/safeRedef/: application.py  test.sh  update.py
examples/basics/threadReboot/: application.py  test.sh  update.py
examples/django/: README.txt  build.sh  cherrypy.diff  run.sh  update1.8.0-1.8.1.py  update1.8.1-1.8.2.py
examples/interactive/: README.md  application.py  client.py  interactive.py  interactive.sh  update.py
examples/products/: products_example.sh  products_update_v2.py  products_update_v3.py  products_v1.py
examples/pyftpdlib/: README.txt  run.sh  start.py  update1.1.0-1.2.0.py  update1.2.0-1.3.0.py  update1.3.0-1.3.1.py  update1.3.1-1.4.0.py
examples/simpleserver/: README.md  server.py  update.py
examples/tests/: README.md  oracle.py  test.sh
examples/trains/: README.md  application.py  applicationgui.py  guiserver.py  test.sh  trains.txt  update.py
examples/tutorial/: README.md  tutorial.tex
examples/webserver/: README.md  application.py  update.py
jamoult/: .project
jamoult/src/: cd.ucls
pymoult/: __init__.py  collector.py  controller.py  controllers.py  listener.py  manager.py  threads.py  updates.py
pymoult/common/: high_level.py  low_level.py
pymoult/heap/: __init__.py  access_strategy.py  class_update.py  generators.py  high_level.py  lazy.py  low_level.py  tools.py  utils.py
pymoult/highlevel/: __init__.py  finderouter.py  listener.py  manager.py  managers.py  updates.py
pymoult/lowlevel/: __init__.py  alterability.py  alterabilty.py  data_access.py  data_update.py  relinking.py  stack.py
pymoult/stack/: __init__.py  generators.py  high_level.py  low_level.py  relinking.py  tools.py  utils.py
(+306 files in other folders)
